feat:레스토랑 엔티티 변경 기능 추가.